--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -14,7 +14,7 @@
                     <li class="list-inline-item"><a href="#">Terms</a></li>
                     <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
                 </ul>
-                <p class="copyright">Company Name © 2018</p>
+                <p class="copyright">Shanyraq 2022</p>
                
             </footer>
         </div>
